syntax = "proto3";
package prism.assets;

import "gogoproto/gogo.proto";
import "prism/assets/refractable_asset.proto";

option go_package = "github.com/prism-finance/prism-core/x/assets/types";

// Params defines the parameters for the module.
message Params {
  FeeRatios default_fee_ratios = 1 [(gogoproto.nullable) = false];
}
